# A_Prog_Labs

./: .gitignore  Cargo.toml  makefile.toml
lab_1/: Cargo.toml
lab_1/src/: main.rs
lab_10/Shared/: Cargo.toml
lab_10/Shared/src/: lib.rs
lab_10/client/: Cargo.toml  index.css
lab_10/client/src/: app.rs  lib.rs  switch.rs
lab_10/client/src/pages/: Error.rs  HistoryByTime.rs  Messenger.rs  mod.rs
lab_10/migrations/: 20211123073853_add_history.sql  20211123073856_add_user_history.sql
lab_10/server/: Cargo.toml
lab_10/server/src/: main.rs
lab_10/server/src/db/: history.rs  mod.rs  prelude.rs  user_history.rs
lab_13/: Cargo.toml
lab_14/: Cargo.toml
lab_15/: Cargo.toml
lab_16/: Cargo.toml
lab_2/: create.html  index.html
lab_3/: Cargo.toml  create.html  index.html  package.json
lab_3/css/: style.css
lab_3/js/: script.js
lab_3/src/: main.rs  server  service.rs
lab_4/: Cargo.toml
lab_4/src/: client.rs  lib.rs  server.rs
lab_5/: #lab_5.glade#  .env  Cargo.toml
lab_5/migrations/2021-11-05-194934_create_workers/: down.sql  up.sql
lab_5/src/: lib.rs  main.rs  models.rs  schema.rs
lab_6/: Cargo.toml
lab_6/src/: main.rs
lab_7/client/: Cargo.toml
lab_7/client/src/: app.rs
lab_7/client/src/pages/: Calculator.rs  Database.rs  Error.rs  Home.rs  page_not_found.rs
lab_7/server/: Cargo.toml
lab_7/server/src/: main.rs
lab_7/server/src/db/: mod.rs  prelude.rs
lab_7/shared/: Cargo.toml
lab_7/shared/src/: lib.rs
lab_8/client/: Cargo.toml  index.html
lab_8/client/src/: app.rs  switch.rs
lab_8/client/src/pages/: Calculator.rs  Database.rs  Error.rs  page_not_found.rs
lab_8/server/: Cargo.toml
lab_8/server/src/: main.rs
lab_8/shared/: Cargo.toml
lab_8/shared/src/: lib.rs
lab_9/client/: Cargo.toml  main.js
lab_9/client/src/pages/: mod.rs
lab_9/migrations/: 20211110115908_worker.sql
lab_9/server/: Cargo.toml
lab_9/server/src/: main.rs
lab_9/server/src/db/: workers.rs
lab_9/shared/: Cargo.toml
