[package]
name = "lab_6"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
imageproc = "0.22.0"
image = "0.23.14"
rusttype = "0.9.2"
rand = "0.8.4"
getrandom = {version = "0.2.3", features = ["js"]}
actix-web = "3"
base64 = "0.13.0"