[package]
name = "server10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#indexmap = "=1.6.0"
shared = { path = "../shared" }
dotenv = "0.15.0"
actix-session = "0.5.0-beta.3"
actix-web = {version = "4.0.0-beta.11", features = ["rustls"]}
actix-files = "0.6.0-beta.8"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
serde = "1.0.130"
sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }