[package]
name = "server10"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
names = { version = "0.12.0", default-features = false }
shared = { path = "../shared" }
dotenv = "0.15.0"
actix-session = "0.5.0-beta.3"
actix-web = {version = "4.0.0-beta.11", features = ["rustls"]}
actix-files = "0.6.0-beta.8"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
serde = "1.0.130"
chrono = "0.4"
sea-orm = { version = "0.4.0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros" ], default-features = false }