[package]
name = "server8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "=1.6.0"
shared = { path = "../shared" }
dotenv = "0.15.0"
actix-http = "2"
actix-web = "3"
actix-flash = "0.2"
actix-files = "0.5"
futures = { version = "^0.3" }
futures-util = { version = "^0.3" }
serde = "1.0.130"
sea-orm = { version = "0.3.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ], default-features = false }